--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.8.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
