--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
+    "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
